Update privacy-policy and terms-conditions page content. Update dates and charges.

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -257,7 +257,7 @@
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-sm-12">
-							<p class="mb-0">© 2022 Doccure. All rights reserved.</p>
+							<p class="mb-0">© 2024 Being Healer. All rights reserved.</p>
 						</div>
 						<a href="#" class="top-move"><i class="fas fa-arrow-up"></i></a>
 					</div>
